--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Frontend/Garbage/dashboard.html
 Frontend/css/icons
 Frontend/.vs/slnx.sqlite
 Frontend/.vs/Frontend/v16/.suo
+Frontend/.vs/slnx.sqlite-journal
