Changed json implementation and enabled cors

--- a/pole-backend/src/main/resources/application.properties
+++ b/pole-backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=SYMP Pole backend
 
-#Mongo Config
+#Primary Mongo Database for Pole data
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=mongo
+spring.data.mongodb.database=primary
+
+
