Implemented image parser to read geolocation from photos and assign it to an existing pole if location matches, otherwise create new pole entry

--- a/pole-backend/pom.xml
+++ b/pole-backend/pom.xml
@@ -43,6 +43,12 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.drewnoakes</groupId>
+			<artifactId>metadata-extractor</artifactId>
+			<version>2.15.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
