--- a/pole-backend/src/main/resources/application.properties
+++ b/pole-backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=SYMP Pole backend
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 #Primary Mongo Database for Pole data
 spring.data.mongodb.host=localhost
