syncing from jon to matt

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Frontend/Garbage/dashboard.html
 Frontend/.vs/slnx.sqlite
 Frontend/.vs/Frontend/v16/.suo
 Frontend/.vs/slnx.sqlite-journal
+Frontend/Garbage/Croppie-2.6.4.zip
+Frontend/Garbage/vrfmwXwQ.jpeg
